fix: add z-index to nav

--- a/styles/nav.scss
+++ b/styles/nav.scss
@@ -8,6 +8,7 @@ nav {
   color: #333;
   justify-content: space-between;
   align-items: center;
+  z-index: 99;
 }
 
 a {
